--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
 div {
-  height: 200px;
+  height: auto;
+  padding-bottom: 3em;
   width: 50%;
 }
 .centertext {
   padding-top: 1em;
   margin-left: auto;
   margin-right: auto;
-  width: 10em
+  width: 10em;
 }
 
 div>button {
-  height:20px; 
+  height:25px; 
   width:100px; 
-  margin: -20px -50px; 
-  position: relative;
-  top:50%; 
-  left:50%;
+}
+
+div>button.center-button {
+  display: block; 
+  margin: 0 auto;
 }
