--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 div.container {
-  /* position: relative; */
-  width: 80%;
+  position: relative;
+  width: 600px;
   height: 500px;
   background-color: lightslategray;
   margin: 0 auto
