--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 div.sized {
   display: block;
-  width: 50px;
-  height: 50px;
+  width: 700px;
+  max-width: 120px;
+  height: 90px;
   margin: 1em 1em;
   border-radius: 1em;
   text-align: center;
-  vertical-align: middle;
 
 }
 
