--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ div.absolute {
   top: 70px;
 }
 
+div.sticky {
+  position: sticky;
+  right: 120px;
+  top: 70px;
+}
+
 div.bg {
   width: 100%;
   height: 1500px;
